fix: change css property text color for better visibility

--- a/projects/addon-doc/src/components/main/main.style.less
+++ b/projects/addon-doc/src/components/main/main.style.less
@@ -141,7 +141,7 @@ label.night-mode {
 .hljs-regexp,
 .hljs-link {
     font-weight: bold;
-    color: var(--tui-primary-active);
+    color: var(--tui-support-06);
 }
 
 .hljs-number,
